--- a/app/src/main/res/layout/fragment_akun.xml
+++ b/app/src/main/res/layout/fragment_akun.xml
@@ -16,10 +16,287 @@
         android:minHeight="?attr/actionBarSize">
     </androidx.appcompat.widget.Toolbar>
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+    <androidx.cardview.widget.CardView
+        app:cardCornerRadius="35dp"
+        app:cardBackgroundColor="@android:color/transparent"
+        android:id="@+id/gambarProfil"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
         android:layout_below="@id/toolbarAkun"
-        android:text="Akun" />
+        android:layout_margin="20dp"
+        android:layout_gravity="center_horizontal">
+        <ImageView
+            android:id="@+id/imgAkun"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:adjustViewBounds="true"
+            android:scaleType="centerCrop"/>
+    </androidx.cardview.widget.CardView>
+
+    <TextView
+        android:id="@+id/namaAkun"
+        android:layout_width="match_parent"
+        android:layout_height="34dp"
+        android:layout_below="@id/toolbarAkun"
+        android:layout_marginTop="15dp"
+        android:layout_marginRight="20dp"
+        android:layout_toRightOf="@+id/gambarProfil"
+        android:text="Nama"
+        android:textColor="@android:color/black"
+        android:textSize="25sp"
+        android:textStyle="bold"/>
+
+    <TextView
+        android:id="@+id/email"
+        android:layout_width="match_parent"
+        android:layout_height="23dp"
+        android:layout_below="@id/namaAkun"
+        android:layout_marginRight="20dp"
+        android:layout_toRightOf="@+id/gambarProfil"
+        android:text="Masuk dengan Email UNESA"
+        android:textSize="15sp"
+        android:textStyle="bold"/>
+
+    <TextView
+        android:id="@+id/lihatAkun"
+        android:layout_width="match_parent"
+        android:layout_height="23dp"
+        android:layout_below="@id/email"
+        android:layout_marginRight="20dp"
+        android:layout_toRightOf="@+id/gambarProfil"
+        android:paddingTop="3dp"
+        android:text="LIHAT PROFIL  >"
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="15sp"
+        android:textStyle="bold"/>
+
+    <androidx.cardview.widget.CardView
+        app:cardBackgroundColor="@android:color/white"
+        android:id="@+id/akun1"
+        android:layout_width="match_parent"
+        android:layout_height="65dp"
+        android:layout_below="@id/lihatAkun"
+        android:layout_marginTop="20dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginLeft="10dp">
+
+        <ImageView
+            android:layout_width="36dp"
+            android:layout_height="36dp"
+            android:layout_margin="15dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/akun_bantuan"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="23dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginLeft="66dp"
+            android:text="Tentang App"
+            android:textColor="@android:color/black"
+            android:textSize="15sp"
+            android:textStyle="bold"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="23dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginLeft="66dp"
+            android:layout_marginTop="33dp"
+            android:layout_marginBottom="10dp"
+            android:text="Lihat Syarat dan Ketentuan"
+            android:textSize="15sp"
+            android:textStyle="bold"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginTop="14dp"
+            android:layout_marginBottom="22dp"
+            android:text=">"
+            android:textSize="25sp"
+            android:textStyle="bold"
+            android:textColor="@color/colorPrimaryDark"
+            android:textAlignment="textEnd"/>
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        app:cardBackgroundColor="@android:color/white"
+        android:id="@+id/akun2"
+        android:layout_width="match_parent"
+        android:layout_height="65dp"
+        android:layout_below="@id/akun1"
+        android:layout_marginTop="1dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginLeft="10dp">
+
+        <ImageView
+            android:layout_width="36dp"
+            android:layout_height="36dp"
+            android:layout_margin="15dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/icon_panggilan"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="23dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginLeft="66dp"
+            android:text="Kontak Darurat"
+            android:textColor="@android:color/black"
+            android:textSize="15sp"
+            android:textStyle="bold"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="23dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginLeft="66dp"
+            android:layout_marginTop="33dp"
+            android:layout_marginBottom="10dp"
+            android:text="Hubungi Kami"
+            android:textSize="15sp"
+            android:textStyle="bold"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginTop="14dp"
+            android:layout_marginBottom="22dp"
+            android:text=">"
+            android:textSize="25sp"
+            android:textStyle="bold"
+            android:textColor="@color/colorPrimaryDark"
+            android:textAlignment="textEnd"/>
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        app:cardBackgroundColor="@android:color/white"
+        android:id="@+id/akun3"
+        android:layout_width="match_parent"
+        android:layout_height="65dp"
+        android:layout_below="@id/akun2"
+        android:layout_marginTop="1dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginLeft="10dp">
+
+        <ImageView
+            android:layout_width="36dp"
+            android:layout_height="36dp"
+            android:layout_margin="15dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/akun_ulasan"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="23dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginLeft="66dp"
+            android:text="Ulasan"
+            android:textColor="@android:color/black"
+            android:textSize="15sp"
+            android:textStyle="bold"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="23dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginLeft="66dp"
+            android:layout_marginTop="33dp"
+            android:layout_marginBottom="10dp"
+            android:text="Kasih Masukkan"
+            android:textSize="15sp"
+            android:textStyle="bold"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginTop="14dp"
+            android:layout_marginBottom="22dp"
+            android:text=">"
+            android:textSize="25sp"
+            android:textStyle="bold"
+            android:textColor="@color/colorPrimaryDark"
+            android:textAlignment="textEnd"/>
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        app:cardBackgroundColor="@android:color/white"
+        android:id="@+id/akun4"
+        android:layout_width="match_parent"
+        android:layout_height="65dp"
+        android:layout_below="@id/akun3"
+        android:layout_marginTop="20dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginLeft="10dp">
+
+        <ImageView
+            android:layout_width="36dp"
+            android:layout_height="36dp"
+            android:layout_margin="15dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/akun_app"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="24dp"
+            android:layout_marginTop="21dp"
+            android:layout_marginBottom="21dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginLeft="66dp"
+            android:text="Versi App"
+            android:textColor="@android:color/black"
+            android:textSize="15sp"
+            android:textStyle="bold"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="24dp"
+            android:layout_marginTop="21dp"
+            android:layout_marginBottom="21dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginLeft="66dp"
+            android:text="1.0.0"
+            android:textColor="@android:color/black"
+            android:textSize="15sp"
+            android:textStyle="bold"
+            android:textAlignment="textEnd"/>
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        app:cardBackgroundColor="@android:color/white"
+        android:id="@+id/akun5"
+        android:layout_width="match_parent"
+        android:layout_height="65dp"
+        android:layout_below="@id/akun4"
+        android:layout_marginTop="1dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginLeft="10dp">
+
+        <ImageView
+            android:layout_width="36dp"
+            android:layout_height="36dp"
+            android:layout_margin="15dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/akun_logout"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="24dp"
+            android:layout_marginTop="21dp"
+            android:layout_marginBottom="21dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginLeft="66dp"
+            android:text="Keluar"
+            android:textColor="@android:color/black"
+            android:textSize="15sp"
+            android:textStyle="bold"/>
+    </androidx.cardview.widget.CardView>
 
 </RelativeLayout>
