--- a/app/src/main/res/layout/activity_armada.xml
+++ b/app/src/main/res/layout/activity_armada.xml
@@ -10,20 +10,23 @@
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbarArmada"
-        android:layout_width="500dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
-        android:minHeight="?attr/actionBarSize"
-        android:scrollbarDefaultDelayBeforeFade="500">
-
+        android:minHeight="?attr/actionBarSize">
         <TextView
             android:id="@+id/textbarArmada"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginRight="200dp"
-            android:text="AGENT TRAVEL"
+            android:layout_marginRight="20dp"
+            android:text="Kendaraan"
             android:textColor="@android:color/black"
-            android:textSize="20dp" />
+            android:textSize="20dp"/>
     </androidx.appcompat.widget.Toolbar>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerArmada"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
 </LinearLayout>
