--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -25,26 +25,29 @@
         android:layout_marginRight="10dp"
         android:layout_marginLeft="10dp"
         android:layout_below="@id/toolbarHome">
+
         <LinearLayout
             android:id="@+id/menuHome1"
             android:layout_width="0dp"
-            android:layout_height="100dp"
-            android:layout_weight="1"
+            android:layout_height="110dp"
             android:layout_margin="5dp"
+            android:layout_weight="1"
             android:orientation="vertical">
+
             <androidx.cardview.widget.CardView
-                app:cardCornerRadius="30dp"
-                app:cardBackgroundColor="@android:color/transparent"
-                android:layout_width="60dp"
+                android:layout_width="67dp"
                 android:layout_height="60dp"
-                android:layout_gravity="center_horizontal">
+                android:layout_gravity="center_horizontal"
+                app:cardBackgroundColor="@android:color/transparent"
+                app:cardCornerRadius="30dp">
+
                 <ImageView
+                    android:id="@+id/imageView6"
                     android:layout_width="60dp"
                     android:layout_height="60dp"
-                    android:adjustViewBounds="true"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/home_menu1"/>
+                    android:src="@drawable/grand_livina" />
             </androidx.cardview.widget.CardView>
+
             <TextView
                 android:id="@+id/jenisArmada1"
                 android:layout_width="wrap_content"
@@ -52,9 +55,8 @@
                 android:layout_gravity="center_horizontal"
                 android:text="Mobil"
                 android:textAlignment="center"
-                android:textSize="12sp"
-                android:textColor="#666666">
-            </TextView>
+                android:textColor="#666666"
+                android:textSize="12sp"></TextView>
         </LinearLayout>
 
         <LinearLayout
@@ -70,12 +72,12 @@
                 android:layout_width="60dp"
                 android:layout_height="60dp"
                 android:layout_gravity="center_horizontal">
+
                 <ImageView
+                    android:id="@+id/imageView4"
                     android:layout_width="60dp"
                     android:layout_height="60dp"
-                    android:adjustViewBounds="true"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/home_menu1"/>
+                    android:src="@drawable/rental_elf_jogja" />
             </androidx.cardview.widget.CardView>
             <TextView
                 android:id="@+id/jenisArmada2"
@@ -102,12 +104,14 @@
                 android:layout_width="60dp"
                 android:layout_height="60dp"
                 android:layout_gravity="center_horizontal">
+
                 <ImageView
                     android:layout_width="60dp"
                     android:layout_height="60dp"
                     android:adjustViewBounds="true"
                     android:scaleType="centerCrop"
-                    android:src="@drawable/home_menu1"/>
+                    android:src="@drawable/home_menu1"
+                    app:srcCompat="@drawable/bus_besar_hdd" />
             </androidx.cardview.widget.CardView>
             <TextView
                 android:layout_width="wrap_content"
@@ -133,12 +137,14 @@
                 android:layout_width="60dp"
                 android:layout_height="60dp"
                 android:layout_gravity="center_horizontal">
+
                 <ImageView
                     android:layout_width="60dp"
                     android:layout_height="60dp"
                     android:adjustViewBounds="true"
                     android:scaleType="centerCrop"
-                    android:src="@drawable/home_menu1"/>
+                    android:src="@drawable/home_menu1"
+                    app:srcCompat="@drawable/bus_kecil" />
             </androidx.cardview.widget.CardView>
             <TextView
                 android:layout_width="wrap_content"
@@ -167,18 +173,21 @@
             android:layout_weight="1"
             android:layout_margin="5dp"
             android:orientation="vertical">
+
             <androidx.cardview.widget.CardView
-                app:cardCornerRadius="30dp"
+                android:layout_width="71dp"
+                android:layout_height="52dp"
+                android:layout_gravity="center_horizontal"
                 app:cardBackgroundColor="@android:color/transparent"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:layout_gravity="center_horizontal">
+                app:cardCornerRadius="30dp">
+
                 <ImageView
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
+                    android:layout_width="69dp"
+                    android:layout_height="50dp"
                     android:adjustViewBounds="true"
                     android:scaleType="centerCrop"
-                    android:src="@drawable/home_menu1"/>
+                    android:src="@drawable/home_menu1"
+                    app:srcCompat="@drawable/elf_long_1" />
             </androidx.cardview.widget.CardView>
             <TextView
                 android:layout_width="wrap_content"
