--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -33,7 +33,7 @@
                 android:id="@+id/imageView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:srcCompat="@drawable/icon_travel" />
+                app:srcCompat="@drawable/logo_travel" />
         </androidx.cardview.widget.CardView>
         <TextView
             app:layout_constraintLeft_toLeftOf="parent"
@@ -105,7 +105,7 @@
                     android:layout_margin="10dp"
                     android:backgroundTint="@android:color/black"
                     android:ems="10"
-                    android:hint=" Password"
+                    android:hint="Password"
                     android:inputType="textPassword"
                     android:gravity="center_vertical" >
                 </EditText>
