--- a/app/src/main/res/layout/activity_profil.xml
+++ b/app/src/main/res/layout/activity_profil.xml
@@ -13,21 +13,13 @@
         android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
         android:minHeight="?attr/actionBarSize">
-        <ImageView
-            android:id="@+id/btnBack"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:adjustViewBounds="true"
-            android:src="@drawable/icon_kembali"/>
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="56dp"
-            android:layout_marginLeft="30dp"
-            android:layout_marginRight="30dp"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="20dp"
             android:text="Profil"
-            android:textSize="22sp"
-            android:textColor="@color/colorBlack"
-            android:gravity="center_vertical"/>
+            android:textColor="@android:color/black"
+            android:textSize="20dp"/>
     </androidx.appcompat.widget.Toolbar>
 
     <ScrollView
@@ -42,7 +34,7 @@
 
             <androidx.cardview.widget.CardView
                 app:cardCornerRadius="100dp"
-                app:cardBackgroundColor="@color/colorWhiteTransparent"
+                app:cardBackgroundColor="@android:color/transparent"
                 android:id="@+id/gambarProfil"
                 android:layout_width="200dp"
                 android:layout_height="200dp"
@@ -60,54 +52,19 @@
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:layout_below="@id/gambarProfil"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
+                android:layout_marginHorizontal="20dp"
                 android:background="#dddddd"/>
-
-            <TextView
-                android:id="@+id/nimProfil"
-                android:layout_width="match_parent"
-                android:layout_height="30dp"
-                android:layout_below="@id/gambarProfil"
-                android:layout_marginTop="20dp"
-                android:layout_marginBottom="10dp"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
-                android:text="Nomor Induk Mahasiswa :"
-                android:textColor="@color/colorBlack"
-                android:textSize="18sp"/>
-
-            <androidx.cardview.widget.CardView
-                app:cardCornerRadius="5dp"
-                app:cardBackgroundColor="#dddddd"
-                android:id="@+id/textNimProfil"
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:layout_below="@id/nimProfil"
-                android:layout_marginRight="20dp"
-                android:layout_marginLeft="20dp">
-                <TextView
-                    android:id="@+id/textNim"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginLeft="10dp"
-                    android:textSize="18dp"
-                    android:gravity="center_vertical"
-                    android:text=""
-                    android:textColor="@color/colorBlack" />
-            </androidx.cardview.widget.CardView>
 
             <TextView
                 android:id="@+id/namaProfil"
                 android:layout_width="match_parent"
                 android:layout_height="30dp"
-                android:layout_below="@id/textNimProfil"
+                android:layout_below="@id/gambarProfil"
                 android:layout_marginTop="20dp"
                 android:layout_marginBottom="10dp"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
+                android:layout_marginHorizontal="20dp"
                 android:text="Nama :"
-                android:textColor="@color/colorBlack"
+                android:textColor="@android:color/black"
                 android:textSize="18sp"/>
 
             <androidx.cardview.widget.CardView
@@ -117,17 +74,16 @@
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:layout_below="@id/namaProfil"
-                android:layout_marginRight="20dp"
-                android:layout_marginLeft="20dp">
+                android:layout_marginHorizontal="20dp">
                 <TextView
                     android:id="@+id/textNama"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginLeft="10dp"
-                    android:gravity="center_vertical"
                     android:textSize="18dp"
+                    android:gravity="center_vertical"
                     android:text=""
-                    android:textColor="@color/colorBlack" />
+                    android:textColor="@android:color/black" />
             </androidx.cardview.widget.CardView>
 
             <TextView
@@ -137,10 +93,9 @@
                 android:layout_below="@id/textNamaProfil"
                 android:layout_marginTop="20dp"
                 android:layout_marginBottom="10dp"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
+                android:layout_marginHorizontal="20dp"
                 android:text="Email :"
-                android:textColor="@color/colorBlack"
+                android:textColor="@android:color/black"
                 android:textSize="18sp"/>
 
             <androidx.cardview.widget.CardView
@@ -150,8 +105,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:layout_below="@id/emailProfil"
-                android:layout_marginRight="20dp"
-                android:layout_marginLeft="20dp">
+                android:layout_marginHorizontal="20dp">
                 <TextView
                     android:id="@+id/textEmail"
                     android:layout_width="match_parent"
@@ -160,20 +114,50 @@
                     android:gravity="center_vertical"
                     android:textSize="18dp"
                     android:text=""
-                    android:textColor="@color/colorBlack" />
+                    android:textColor="@android:color/black" />
+            </androidx.cardview.widget.CardView>
+
+            <TextView
+                android:id="@+id/profesiProfil"
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:layout_below="@id/textEmailProfil"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="10dp"
+                android:layout_marginHorizontal="20dp"
+                android:text="Profesi :"
+                android:textColor="@android:color/black"
+                android:textSize="18sp"/>
+
+            <androidx.cardview.widget.CardView
+                app:cardCornerRadius="5dp"
+                app:cardBackgroundColor="#dddddd"
+                android:id="@+id/textProfesiProfil"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_below="@id/profesiProfil"
+                android:layout_marginHorizontal="20dp">
+                <TextView
+                    android:id="@+id/textProfesi"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="10dp"
+                    android:gravity="center_vertical"
+                    android:textSize="18dp"
+                    android:text=""
+                    android:textColor="@android:color/black" />
             </androidx.cardview.widget.CardView>
 
             <TextView
                 android:id="@+id/jkProfil"
                 android:layout_width="match_parent"
                 android:layout_height="30dp"
-                android:layout_below="@id/textEmailProfil"
+                android:layout_below="@id/textProfesiProfil"
                 android:layout_marginTop="20dp"
                 android:layout_marginBottom="10dp"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
+                android:layout_marginHorizontal="20dp"
                 android:text="Jenis Kelamin :"
-                android:textColor="@color/colorBlack"
+                android:textColor="@android:color/black"
                 android:textSize="18sp"/>
 
             <androidx.cardview.widget.CardView
@@ -183,8 +167,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:layout_below="@id/jkProfil"
-                android:layout_marginRight="20dp"
-                android:layout_marginLeft="20dp">
+                android:layout_marginHorizontal="20dp">
                 <TextView
                     android:id="@+id/textJk"
                     android:layout_width="match_parent"
@@ -193,86 +176,19 @@
                     android:gravity="center_vertical"
                     android:textSize="18dp"
                     android:text=""
-                    android:textColor="@color/colorBlack" />
-            </androidx.cardview.widget.CardView>
-
-            <TextView
-                android:id="@+id/prodiProfil"
-                android:layout_width="match_parent"
-                android:layout_height="30dp"
-                android:layout_below="@id/textJkProfil"
-                android:layout_marginTop="20dp"
-                android:layout_marginBottom="10dp"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
-                android:text="Program Studi :"
-                android:textColor="@color/colorBlack"
-                android:textSize="18sp"/>
-
-            <androidx.cardview.widget.CardView
-                app:cardCornerRadius="5dp"
-                app:cardBackgroundColor="#dddddd"
-                android:id="@+id/textProdiProfil"
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:layout_below="@id/prodiProfil"
-                android:layout_marginRight="20dp"
-                android:layout_marginLeft="20dp">
-                <TextView
-                    android:id="@+id/textProdi"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginLeft="10dp"
-                    android:gravity="center_vertical"
-                    android:textSize="18dp"
-                    android:text=""
-                    android:textColor="@color/colorBlack" />
-            </androidx.cardview.widget.CardView>
-
-            <TextView
-                android:id="@+id/ipkProfil"
-                android:layout_width="match_parent"
-                android:layout_height="30dp"
-                android:layout_below="@id/textProdiProfil"
-                android:layout_marginTop="20dp"
-                android:layout_marginBottom="10dp"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
-                android:text="Indeks Prestasi Komulatif :"
-                android:textColor="@color/colorBlack"
-                android:textSize="18sp"/>
-
-            <androidx.cardview.widget.CardView
-                app:cardCornerRadius="5dp"
-                app:cardBackgroundColor="#dddddd"
-                android:id="@+id/textIpkProfil"
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:layout_below="@id/ipkProfil"
-                android:layout_marginRight="20dp"
-                android:layout_marginLeft="20dp">
-                <TextView
-                    android:id="@+id/textIpk"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginLeft="10dp"
-                    android:gravity="center_vertical"
-                    android:textSize="18dp"
-                    android:text=""
-                    android:textColor="@color/colorBlack" />
+                    android:textColor="@android:color/black" />
             </androidx.cardview.widget.CardView>
 
             <TextView
                 android:id="@+id/alamatProfil"
                 android:layout_width="match_parent"
                 android:layout_height="30dp"
-                android:layout_below="@id/textIpkProfil"
+                android:layout_below="@id/textJkProfil"
                 android:layout_marginTop="20dp"
                 android:layout_marginBottom="10dp"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
+                android:layout_marginHorizontal="20dp"
                 android:text="Alamat :"
-                android:textColor="@color/colorBlack"
+                android:textColor="@android:color/black"
                 android:textSize="18sp"/>
 
             <androidx.cardview.widget.CardView
@@ -282,8 +198,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:layout_below="@id/alamatProfil"
-                android:layout_marginRight="20dp"
-                android:layout_marginLeft="20dp">
+                android:layout_marginHorizontal="20dp">
                 <TextView
                     android:id="@+id/textAlamat"
                     android:layout_width="match_parent"
@@ -292,7 +207,7 @@
                     android:gravity="center_vertical"
                     android:textSize="18dp"
                     android:text=""
-                    android:textColor="@color/colorBlack" />
+                    android:textColor="@android:color/black" />
             </androidx.cardview.widget.CardView>
 
             <TextView
@@ -302,10 +217,9 @@
                 android:layout_below="@id/textAlamatProfil"
                 android:layout_marginTop="20dp"
                 android:layout_marginBottom="10dp"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
+                android:layout_marginHorizontal="20dp"
                 android:text="Nomor Telepon :"
-                android:textColor="@color/colorBlack"
+                android:textColor="@android:color/black"
                 android:textSize="18sp"/>
 
             <androidx.cardview.widget.CardView
@@ -316,8 +230,7 @@
                 android:layout_height="40dp"
                 android:layout_below="@id/noProfil"
                 android:layout_marginBottom="30dp"
-                android:layout_marginRight="20dp"
-                android:layout_marginLeft="20dp">
+                android:layout_marginHorizontal="20dp">
                 <TextView
                     android:id="@+id/textNo"
                     android:layout_width="match_parent"
@@ -326,10 +239,9 @@
                     android:gravity="center_vertical"
                     android:textSize="18dp"
                     android:text=""
-                    android:textColor="@color/colorBlack" />
+                    android:textColor="@android:color/black" />
             </androidx.cardview.widget.CardView>
 
         </RelativeLayout>
     </ScrollView>
-
 </RelativeLayout>
