--- a/app/src/main/res/layout/activity_tentang.xml
+++ b/app/src/main/res/layout/activity_tentang.xml
@@ -13,11 +13,10 @@
         android:background="@color/colorPrimaryDark"
         android:minHeight="?attr/actionBarSize">
         <TextView
-            android:id="@+id/textbarArmada"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginRight="20dp"
-            android:text="Kendaraan"
+            android:text="Tentang Aplikasi"
             android:textColor="@android:color/black"
             android:textSize="20dp"/>
     </androidx.appcompat.widget.Toolbar>
