--- a/app/src/main/res/layout/activity_ulasan.xml
+++ b/app/src/main/res/layout/activity_ulasan.xml
@@ -8,32 +8,24 @@
     tools:context=".ActivityUlasan">
 
     <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbarUlas"
+        android:id="@+id/toolbarUlasan"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
         android:minHeight="?attr/actionBarSize">
-        <ImageView
-            android:id="@+id/btnBack"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:adjustViewBounds="true"
-            android:src="@drawable/icon_kembali"/>
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="56dp"
-            android:layout_marginLeft="30dp"
-            android:layout_marginRight="30dp"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="20dp"
             android:text="Ulasan"
-            android:textSize="22sp"
-            android:textColor="@color/colorBlack"
-            android:gravity="center_vertical"/>
+            android:textColor="@android:color/black"
+            android:textSize="20dp"/>
     </androidx.appcompat.widget.Toolbar>
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/toolbarUlas"
+        android:layout_below="@id/toolbarUlasan"
         android:scrollbars="none">
 
         <RelativeLayout
@@ -49,7 +41,7 @@
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
                 android:text="Ulas Kami"
-                android:textColor="@color/colorBlack"
+                android:textColor="@android:color/black"
                 android:textSize="20sp"
                 android:textStyle="bold"/>
 
@@ -71,7 +63,7 @@
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
                 android:text="Nama :"
-                android:textColor="@color/colorBlack"
+                android:textColor="@android:color/black"
                 android:textSize="18sp"/>
 
             <androidx.cardview.widget.CardView
@@ -91,7 +83,7 @@
                     android:gravity="center_vertical"
                     android:textSize="18dp"
                     android:text=""
-                    android:textColor="@color/colorBlack" />
+                    android:textColor="@android:color/black" />
             </androidx.cardview.widget.CardView>
 
             <TextView
@@ -104,7 +96,7 @@
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
                 android:text="Email :"
-                android:textColor="@color/colorBlack"
+                android:textColor="@android:color/black"
                 android:textSize="18sp"/>
 
             <androidx.cardview.widget.CardView
@@ -124,7 +116,7 @@
                     android:gravity="center_vertical"
                     android:textSize="18dp"
                     android:text=""
-                    android:textColor="@color/colorBlack" />
+                    android:textColor="@android:color/black" />
             </androidx.cardview.widget.CardView>
 
             <TextView
@@ -137,13 +129,13 @@
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
                 android:text="Ulasan :"
-                android:textColor="@color/colorBlack"
+                android:textColor="@android:color/black"
                 android:textSize="18sp"/>
 
             <androidx.cardview.widget.CardView
                 app:cardCornerRadius="5dp"
                 app:cardElevation="5dp"
-                app:cardBackgroundColor="@color/colorWhite"
+                app:cardBackgroundColor="@android:color/white"
                 android:id="@+id/textPesanUlas"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -156,10 +148,10 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="10dp"
                     android:inputType="textMultiLine"
-                    android:background="@color/colorWhite"
+                    android:background="@android:color/white"
                     android:hint=" Masukkan Ulasan Anda Disini"
                     android:textSize="18dp"
-                    android:textColor="@color/colorBlack"/>
+                    android:textColor="@android:color/black"/>
             </androidx.cardview.widget.CardView>
 
             <Button
@@ -171,9 +163,10 @@
                 android:layout_marginRight="20dp"
                 android:layout_marginTop="20dp"
                 android:layout_marginBottom="20dp"
-                android:background="@drawable/btn_indikator"
+                android:background="@drawable/box_text"
+                android:backgroundTint="@color/colorPrimary"
                 android:text="Kirim"
-                android:textColor="@color/colorBlack"
+                android:textColor="@android:color/black"
                 android:textAlignment="center" />
 
         </RelativeLayout>
