--- a/app/src/main/res/layout/activity_profil.xml
+++ b/app/src/main/res/layout/activity_profil.xml
@@ -8,18 +8,12 @@
     tools:context=".ActivityProfil">
 
     <androidx.appcompat.widget.Toolbar
+        app:title="Profil"
         android:id="@+id/toolbarProfil"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
         android:minHeight="?attr/actionBarSize">
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="20dp"
-            android:text="Profil"
-            android:textColor="@android:color/black"
-            android:textSize="20dp"/>
     </androidx.appcompat.widget.Toolbar>
 
     <ScrollView
@@ -64,6 +58,7 @@
                 android:layout_marginBottom="10dp"
                 android:layout_marginHorizontal="20dp"
                 android:text="Nama :"
+                android:textStyle="bold"
                 android:textColor="@android:color/black"
                 android:textSize="18sp"/>
 
@@ -95,6 +90,7 @@
                 android:layout_marginBottom="10dp"
                 android:layout_marginHorizontal="20dp"
                 android:text="Email :"
+                android:textStyle="bold"
                 android:textColor="@android:color/black"
                 android:textSize="18sp"/>
 
@@ -126,6 +122,7 @@
                 android:layout_marginBottom="10dp"
                 android:layout_marginHorizontal="20dp"
                 android:text="Profesi :"
+                android:textStyle="bold"
                 android:textColor="@android:color/black"
                 android:textSize="18sp"/>
 
@@ -157,6 +154,7 @@
                 android:layout_marginBottom="10dp"
                 android:layout_marginHorizontal="20dp"
                 android:text="Jenis Kelamin :"
+                android:textStyle="bold"
                 android:textColor="@android:color/black"
                 android:textSize="18sp"/>
 
@@ -188,6 +186,7 @@
                 android:layout_marginBottom="10dp"
                 android:layout_marginHorizontal="20dp"
                 android:text="Alamat :"
+                android:textStyle="bold"
                 android:textColor="@android:color/black"
                 android:textSize="18sp"/>
 
@@ -219,6 +218,7 @@
                 android:layout_marginBottom="10dp"
                 android:layout_marginHorizontal="20dp"
                 android:text="Nomor Telepon :"
+                android:textStyle="bold"
                 android:textColor="@android:color/black"
                 android:textSize="18sp"/>
 
