--- a/app/src/main/res/layout/activity_tentang.xml
+++ b/app/src/main/res/layout/activity_tentang.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,18 +8,12 @@
     tools:context=".ActivityTentang">
 
     <androidx.appcompat.widget.Toolbar
+        app:title="Tentang Aplikasi"
         android:id="@+id/toolbarBantuan"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimaryDark"
+        android:background="@color/colorPrimary"
         android:minHeight="?attr/actionBarSize">
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="20dp"
-            android:text="Tentang Aplikasi"
-            android:textColor="@android:color/black"
-            android:textSize="20dp"/>
     </androidx.appcompat.widget.Toolbar>
 
     <ScrollView
