--- a/app/src/main/res/layout/activity_ulasan.xml
+++ b/app/src/main/res/layout/activity_ulasan.xml
@@ -8,18 +8,12 @@
     tools:context=".ActivityUlasan">
 
     <androidx.appcompat.widget.Toolbar
+        app:title="Ulasan"
         android:id="@+id/toolbarUlasan"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
         android:minHeight="?attr/actionBarSize">
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="20dp"
-            android:text="Ulasan"
-            android:textColor="@android:color/black"
-            android:textSize="20dp"/>
     </androidx.appcompat.widget.Toolbar>
 
     <ScrollView
@@ -164,9 +158,9 @@
                 android:layout_marginTop="20dp"
                 android:layout_marginBottom="20dp"
                 android:background="@drawable/box_text"
-                android:backgroundTint="@color/colorPrimary"
+                android:backgroundTint="@color/colorPrimaryDark"
                 android:text="Kirim"
-                android:textColor="@android:color/black"
+                android:textColor="@android:color/white"
                 android:textAlignment="center" />
 
         </RelativeLayout>
