--- a/app/src/main/res/layout/fragment_inbox.xml
+++ b/app/src/main/res/layout/fragment_inbox.xml
@@ -8,7 +8,7 @@
     tools:context=".FragmentInbox">
 
     <androidx.appcompat.widget.Toolbar
-        app:title="@string/app_name"
+        app:title="Shikat Travel Car"
         android:id="@+id/toolbarInbox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
