--- a/app/src/main/res/layout/activity_pemesanan.xml
+++ b/app/src/main/res/layout/activity_pemesanan.xml
@@ -106,7 +106,7 @@
                                 tools:layout_editor_absoluteX="133dp"
                                 tools:layout_editor_absoluteY="136dp" />
                             <TextView
-                                android:id="@+id/jenisArmada"
+                                android:id="@+id/jenisAPemesanan"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:fontFamily="@font/amethysta"
@@ -176,7 +176,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="20dp"
-                    android:layout_marginBottom="20dp"
                     android:orientation="horizontal">
                     <TextView
                         android:layout_width="wrap_content"
@@ -199,6 +198,98 @@
                         tools:layout_editor_absoluteX="133dp"
                         tools:layout_editor_absoluteY="136dp" />
                 </LinearLayout>
+
+                <TextView
+                    android:id="@+id/textImgAPemesanan"
+                    android:layout_width="match_parent"
+                    android:layout_height="20dp"
+                    android:layout_marginHorizontal="20dp"
+                    android:fontFamily="@font/amethysta"
+                    android:gravity="center_vertical"
+                    android:textColor="@android:color/transparent"
+                    tools:layout_editor_absoluteX="133dp"
+                    tools:layout_editor_absoluteY="136dp" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="20dp"
+                    android:layout_marginBottom="10dp"
+                    android:fontFamily="@font/amethysta"
+                    android:text="Identitas Customer"
+                    android:textColor="#0C0C0C"
+                    android:textSize="14dp"
+                    android:textStyle="bold"
+                    tools:layout_editor_absoluteX="37dp"
+                    tools:layout_editor_absoluteY="179dp" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="20dp"
+                    android:orientation="horizontal">
+                    <ImageView
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:layout_marginLeft="10dp"
+                        app:srcCompat="@drawable/icon_person1"
+                        tools:layout_editor_absoluteX="37dp"
+                        tools:layout_editor_absoluteY="212dp" />
+
+                    <EditText
+                        android:id="@+id/namaPemesan"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:layout_gravity="center_vertical"
+                        android:gravity="center_vertical"
+                        android:fontFamily="@font/amethysta"
+                        android:hint="Masukkan nama akun anda"
+                        android:textColor="#0B0A0A"
+                        android:textSize="15dp"
+                        android:background="@android:color/white"
+                        tools:layout_editor_absoluteX="103dp"
+                        tools:layout_editor_absoluteY="212dp" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="20dp"
+                    android:layout_marginTop="10dp"
+                    android:orientation="horizontal">
+                    <ImageView
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:layout_marginLeft="10dp"
+                        app:srcCompat="@drawable/icon_email"
+                        tools:layout_editor_absoluteX="37dp"
+                        tools:layout_editor_absoluteY="212dp" />
+
+                    <EditText
+                        android:id="@+id/emailPemesan"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:layout_gravity="center_vertical"
+                        android:gravity="center_vertical"
+                        android:fontFamily="@font/amethysta"
+                        android:hint="Masukkan email akun anda"
+                        android:textColor="#0B0A0A"
+                        android:textSize="15dp"
+                        android:background="@android:color/white"
+                        tools:layout_editor_absoluteX="103dp"
+                        tools:layout_editor_absoluteY="212dp" />
+                </LinearLayout>
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="3dp"
+                    android:layout_marginHorizontal="20dp"
+                    android:layout_marginVertical="10dp"
+                    android:background="#8F8B8B"
+                    tools:layout_editor_absoluteX="35dp"
+                    tools:layout_editor_absoluteY="416dp" />
 
                 <TextView
                     android:layout_width="match_parent"
@@ -384,7 +475,7 @@
                         android:layout_marginLeft="5dp"
                         android:layout_gravity="center_vertical"
                         android:fontFamily="@font/amethysta"
-                        android:textColor="#0B0A0A"
+                        android:textColor="@android:color/transparent"
                         android:textSize="15dp"
                         tools:layout_editor_absoluteX="103dp"
                         tools:layout_editor_absoluteY="212dp" />
@@ -497,7 +588,7 @@
                         android:layout_marginLeft="5dp"
                         android:layout_gravity="center_vertical"
                         android:fontFamily="@font/amethysta"
-                        android:textColor="#0B0A0A"
+                        android:textColor="@android:color/transparent"
                         android:textSize="15dp"
                         tools:layout_editor_absoluteX="103dp"
                         tools:layout_editor_absoluteY="212dp" />
@@ -556,7 +647,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="20dp"
-                    android:layout_marginRight="10dp"
                     android:orientation="horizontal">
                     <TextView
                         android:layout_width="wrap_content"
@@ -585,18 +675,34 @@
                         tools:layout_editor_absoluteY="212dp" />
                 </LinearLayout>
 
-                <TextView
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="20dp"
                     android:layout_marginVertical="10dp"
-                    android:fontFamily="@font/amethysta"
-                    android:text="Paket Fasilitas"
-                    android:textColor="#0C0C0C"
-                    android:textSize="14dp"
-                    android:textStyle="bold"
-                    tools:layout_editor_absoluteX="37dp"
-                    tools:layout_editor_absoluteY="179dp" />
+                    android:orientation="horizontal">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/amethysta"
+                        android:text="Paket Fasilitas : "
+                        android:textColor="#0C0C0C"
+                        android:textSize="14dp"
+                        android:textStyle="bold"
+                        tools:layout_editor_absoluteX="37dp"
+                        tools:layout_editor_absoluteY="179dp" />
+
+                    <TextView
+                        android:id="@+id/textPaket"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/amethysta"
+                        android:textColor="#0C0C0C"
+                        android:textSize="14dp"
+                        android:textStyle="bold"
+                        tools:layout_editor_absoluteX="37dp"
+                        tools:layout_editor_absoluteY="179dp" />
+                </LinearLayout>
 
                 <RadioGroup
                     android:id="@+id/paketFasilitas"
