--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -69,7 +69,7 @@
                     android:layout_height="40dp"
                     android:layout_gravity="center"
                     android:backgroundTint="@android:color/black"
-                    android:background="@drawable/icon_username" />
+                    android:background="@drawable/icon_email" />
                 <EditText
                     android:id="@+id/textEmail"
                     android:layout_width="match_parent"
@@ -77,7 +77,7 @@
                     android:layout_margin="10dp"
                     android:backgroundTint="@android:color/black"
                     android:ems="10"
-                    android:hint="Username"
+                    android:hint="Masukkan Email"
                     android:inputType="textEmailAddress"
                     android:gravity="center_vertical" />
             </LinearLayout>
@@ -90,7 +90,7 @@
                     android:layout_height="40dp"
                     android:layout_gravity="center"
                     android:backgroundTint="@android:color/black"
-                    android:background="@drawable/icon_password" />
+                    android:background="@drawable/icon_password1" />
                 <EditText
                     android:id="@+id/textPassword"
                     android:layout_width="match_parent"
@@ -98,7 +98,7 @@
                     android:layout_margin="10dp"
                     android:backgroundTint="@android:color/black"
                     android:ems="10"
-                    android:hint="Password"
+                    android:hint="Masukkan Password"
                     android:inputType="textPassword"
                     android:gravity="center_vertical" >
                 </EditText>
