--- a/app/src/main/res/layout/fragment_aktivitas.xml
+++ b/app/src/main/res/layout/fragment_aktivitas.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".FragmentAktivitas">
 
     <androidx.appcompat.widget.Toolbar
@@ -16,10 +17,40 @@
         android:minHeight="?attr/actionBarSize">
     </androidx.appcompat.widget.Toolbar>
 
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/toolbarAktivitas"
-        android:text="Aktivitas" />
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginVertical="10dp"
+        android:orientation="horizontal">
+        <ImageView
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginLeft="10dp"
+            app:srcCompat="@drawable/icon_person1"
+            tools:layout_editor_absoluteX="37dp"
+            tools:layout_editor_absoluteY="212dp" />
 
-</RelativeLayout>
+        <EditText
+            android:id="@+id/pemesanAktivitas"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_gravity="center_vertical"
+            android:gravity="center_vertical"
+            android:text="Nama"
+            android:fontFamily="@font/amethysta"
+            android:textColor="#0B0A0A"
+            android:textSize="15dp"
+            android:textStyle="bold"
+            android:background="@android:color/transparent"
+            tools:layout_editor_absoluteX="103dp"
+            tools:layout_editor_absoluteY="212dp" />
+    </LinearLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerAktivitas"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
+</LinearLayout>
