--- a/app/src/main/res/layout/fragment_inbox.xml
+++ b/app/src/main/res/layout/fragment_inbox.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".FragmentInbox">
 
     <androidx.appcompat.widget.Toolbar
@@ -19,7 +20,6 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerInbox"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/toolbarInbox"/>
+        android:layout_height="match_parent"/>
 
-</RelativeLayout>
+</LinearLayout>
